1. Улучшения Collection API [#283704]